--- a/index.html
+++ b/index.html
@@ -1,12 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Hello, world!</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="" />
-</head>
-<body>
-  <h1>Hello, world! I am using Git!</h1>
-</body>
+  <head>
+    <title>Esri Map</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="description" content="" />
+    <!-- calls for the arcgis api -->
+    <link
+      rel="stylesheet"
+      href="https://js.arcgis.com/4.25/esri/themes/light/main.css"
+    />
+    <script src="https://js.arcgis.com/4.25/"></script>
+
+    <script>
+      require([
+        "esri/config",
+        "esri/Map",
+        "esri/views/MapView",
+        "esri/geometry/Point",
+        "esri/widgets/BasemapGallery",
+        "esri/widgets/Expand",
+        "esri/widgets/Locate",
+        "esri/widgets/Search",
+      ], function (
+        esriConfig,
+        Map,
+        MapView,
+        Point,
+        BasemapGallery,
+        Expand,
+        Locate,
+        Search
+      ) {
+        const map = new Map({
+          basemap: "satellite",
+        });
+
+        const view = new MapView({
+          map: map,
+          center: [-97.7431, 30.2672], // Longitude, latitude
+          zoom: 13, // Zoom level
+          container: "viewDiv", // Div element
+        });
+        // update zoom level
+        view.zoom = 10;
+
+        // Updates the view's center point to a pre-determined Point object
+        let pt = new Point({
+          x: 120.1503,
+          y: 30.243,
+          spatialReference: { wkid: 4326 },
+        });
+        view.center = pt;
+
+        // Add baseGallery widget to the top right corner of the view
+        let basemapGallery = new BasemapGallery({
+          view: view,
+        });
+
+        let GalleryExpand = new Expand({
+          expandIcon: "esri-icon-basemap",
+          view: view,
+          content: basemapGallery,
+          expanded: false,
+        });
+        view.ui.add(GalleryExpand, {
+          position: "top-right",
+        });
+
+        // Add the locate widget to the top left corner of the view
+        const locateBtn = new Locate({
+          view: view,
+        });
+        view.ui.add(locateBtn, {
+          position: "top-left",
+        });
+
+        // Adds the search widget below other elements in the top left corner of the view
+        const searchWidget = new Search({
+          view: view,
+        });
+
+        let SearchExpand = new Expand({
+          view:view,
+          content:searchWidget,
+          expandIcon:"search",
+          expanded:false
+        })
+        view.ui.add(SearchExpand, {
+          position: "top-left",
+        });
+      });
+    </script>
+
+    <!-- css to make a full screen map -->
+    <style>
+      html,
+      body,
+      #viewDiv {
+        padding: 0;
+        margin: 0;
+        height: 100%;
+        width: 100%;
+      }
+
+    </style>
+  </head>
+  <body>
+    <!-- <h1>Hello, world! I am using Git!</h1> -->
+
+    <!-- div to show the map -->
+    <div id="viewDiv"></div>
+  </body>
 </html>
